Fix logo on mobile devices

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -203,6 +203,10 @@ header#sidebar h2#subtitle {
     right: auto;
     margin-top: 20px;
     margin-bottom: 0;
+
+    div {
+      margin: auto;
+    }
   }
 
   ul#menu {
